fixed logo bug - needed to be aligned center

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@ p, h1, h2, h3, h4, h5, h6 {
     position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     z-index: 1;
 }
 
@@ -847,9 +848,10 @@ input[type=email] {
 
 @media (min-width: 50rem) {
     .footer__socials  > svg {
-        padding: 1rem 0rem;
+        padding: 0;
         width: 100%;
         height: 35%;
+        margin-top: 0.4rem
     }
 }
 
@@ -858,6 +860,7 @@ input[type=email] {
     width: 50px;
     aspect-ratio: 1;
     cursor: pointer;
+  
 }
 
 .footer__socials__icon:hover {
@@ -902,7 +905,6 @@ input[type=email] {
         justify-content: space-between;
         }
 }
-
 
 
 .footer__copyright {
